--- a/notebooks/01_EDA.ipynb
+++ b/notebooks/01_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "32cafa55",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "48b0916d",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b713bc42",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
          "type": "float"
         }
        ],
-       "ref": "a002f714-db58-4237-bb82-39ccbbbace5c",
+       "ref": "61e7a906-daed-44c2-8a38-08406688929d",
        "rows": [
         [
          "0",
@@ -1111,7 +1111,7 @@
        "[5 rows x 79 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "c0c5c14c",
    "metadata": {},
    "outputs": [
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "be327dcb",
    "metadata": {},
    "outputs": [
@@ -1263,7 +1263,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,10 +1368,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "7f0ded37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAssertionError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 64\u001b[39m\n\u001b[32m     59\u001b[39m LINKS = [\n\u001b[32m     60\u001b[39m     \u001b[33m'\u001b[39m\u001b[33mlisting_url\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     61\u001b[39m ]\n\u001b[32m     63\u001b[39m \u001b[38;5;66;03m# Security check\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m64\u001b[39m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(TARGET + COLUMNS_TO_DROP + CATEGORICAL + BOOLEAN + NUMERICAL + NEEDS_PARSING + DATES + LINKS) == \u001b[38;5;28mlen\u001b[39m(df.columns)\n",
+      "\u001b[31mAssertionError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "TARGET = ['price']\n",
     "\n",
@@ -1449,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b3fc8c06",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "66066664",
    "metadata": {},
    "outputs": [
@@ -1550,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "8d361fdd",
    "metadata": {},
    "outputs": [],
@@ -1560,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "3b120dd4",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "86a8722d",
    "metadata": {},
    "outputs": [
@@ -4779,7 +4791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "7558860e",
    "metadata": {},
    "outputs": [
@@ -4832,7 +4844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3b25379e",
    "metadata": {},
    "outputs": [
@@ -4902,7 +4914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "e7b032bc",
    "metadata": {},
    "outputs": [
@@ -5686,7 +5698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "fc7e3312",
    "metadata": {},
    "outputs": [
@@ -6611,7 +6623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "da29ff77",
    "metadata": {},
    "outputs": [
@@ -6665,7 +6677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "d99a8da6",
    "metadata": {},
    "outputs": [
@@ -6701,7 +6713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "79da1970",
    "metadata": {},
    "outputs": [
@@ -6770,7 +6782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "81388115",
    "metadata": {},
    "outputs": [
@@ -6851,7 +6863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "691ee5ff",
    "metadata": {},
    "outputs": [
@@ -6913,7 +6925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "1d67d652",
    "metadata": {},
    "outputs": [
@@ -7049,7 +7061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "72b4e128",
    "metadata": {},
    "outputs": [
@@ -7139,7 +7151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "3eb86b36",
    "metadata": {},
    "outputs": [
@@ -7215,7 +7227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "5d182553",
    "metadata": {},
    "outputs": [
@@ -7285,7 +7297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "48277453",
    "metadata": {},
    "outputs": [
